--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -13,10 +13,11 @@
               = f.text_field :name, autofocus: "autofocus", style: "padding: 20px; width: 500px; font-size: 28px; line-height: 36px; text-align: center;", placeholder: "Something awesome..."
           - if @exact_path
             %h4 Uh oh! Someone has already made that Challenge.
-            %h5 
-              Don't worry, you can still 
-              = link_to "become a contributor", join_path_path(@exact_path)
-              to the #{@exact_path.name} Challenge
+            %h5 Don't worry, you can still contribute to the #{@exact_path.name} Challenge.
+            %div
+            = link_to "Become a contributor", join_path_path(@exact_path), class: "button button-xlarge button-info"
+            .or_divider OR
+              
           - elsif not @similar_paths.empty?
             %h4 Hmmm. Looks like there are Challenges with similar names.
             %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
