--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -33,17 +33,8 @@
     - @paths.to_a.each_with_index do |path, i|
       %div.mosaic-block.bar2{ style: (((i+1) % 4 == 0) ? "margin-right: 0px;" : "") }
         %div.details
-          - if path.public?
-            = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
-              %h4 #{truncate(path.name,length: 17, separator: ' ')}
-              - if current_user.enrolled?(path)
-                %button.btn.btn-success Enrolled
-              - else
-                %button.btn.btn-danger Join
-          - else
-            %a.mosaic-overlay{ style: "height: 38px; bottom: -18px;" }
-              %h4 #{truncate(path.name,length: 17, separator: ' ')}
-              %h5 Coming Soon!
+          = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
+            %h4{ style: "margin-top: 5px; line-height: 17px; font-size: 14px;" } #{truncate(path.name,length: 30, separator: ' ')}
             
         %div 
           = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140", alt: "#{path.name}"
