--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,13 +1,18 @@
+- if owner_has_comments == "t"
+  - comments = Comment.where(owner_type: owner_type, owner_id: owner_id).where("locked_at is ?", nil)
+- else
+  - comments = []
+
 %div.postfooter
   %div.leftstuff
     %div.displayin.floatl
-      %a.comment{ style: "position: relative; top: 5px;", onclick: "open_comments(this);" } #{owner.comments.size.to_i} Comments
+      %a.comment{ style: "position: relative; top: 5px;", onclick: "open_comments(this);" } #{comments.size}  Comments
     = render "shared/sharing", { custom_style: "display: inline; margin-left: 10px; float: left;", title: sharing_title, url: sharing_url }
   %div.comments{ style: "text-align: left; display: none;" }
-    - if owner.comments.empty?
+    - if comments.empty?
       %p.no_comments There are no comments for this yet. 
     %ul{ style: "list-style: none; margin: 10px 0 20px 0;" }
-      - owner.comments.each do |comment|
+      - comments.each do |comment|
         = render "comments/comment", comment: comment
     - if current_user
       = form_for(current_user.comments.new, remote: true) do |f|
