--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -103,7 +103,7 @@
         %ul.nav.pull-right{ style: "float:right; margin-right: 175px;" }
           %li
             %div{ style: "width: 300px; margin-top: 2px;"}
-              = image_tag @enrollment.path.image, style: "width: 32px; height: 32px; margin-top: 2px;", alt: "#{@path.name}"            
+              = image_tag @path.image, style: "width: 32px; height: 32px; margin-top: 2px;", alt: "#{@path.name}"            
               %div{ style: "vertical-align: top; width: 255px; margin-left: 5px; display: inline-block; color: white;" }
                 %span Level #{@enrollment.level} - #{@enrollment.points_to_next_level} more points to next level
                 %div.progress.progress-info{ style: "height: 10px; margin:0;" }
