--- a/app/views/modals/_explore.html.haml
+++ b/app/views/modals/_explore.html.haml
@@ -1,10 +1,6 @@
 %div#explore_modal.dropdown_modal.modal.hide.fade{ tabindex: "-1" }
   %div.explorecontainer
-    - personas = current_user.user_personas.includes(:persona).eager_load
-    - if personas.size > 0      
-      - @persona = current_user.user_personas.includes(:persona).sort{ |a, b| b.level <=> a.level }.first.persona
-    - else
-      - @persona = Persona.first
-    - @paths = @persona.public_paths.order("public_at DESC")
+    - @persona = Persona.first unless @persona
+    - @paths = @persona.public_paths.order("public_at DESC") unless @paths
     = render "personas/show"
       
