--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -106,7 +106,7 @@
                 %span{style: "position:relative; top:2px; "}= truncate(enrollment.path.name, length: 19)
                 %span.pts #{enrollment.total_points} points
         
-        - if Rails.env == "development"
+        - if false
           %div.leftbox.creations
             %div.leftboxheader My Creations
             %div.leftboxfooter
