--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,15 +7,6 @@
       - if @path && @current_section
         = render "modals/launchpad"
       - if show_nav_bar
-        %script{ src: "http://connect.facebook.net/en_US/all.js" }
-        :javascript
-          $(function(){
-            $(".invite_facebook_friends").click(function(){
-              FB.init({appId  : "#{ENV['FACEBOOK_KEY']}", frictionlessRequests: true});
-              FB.ui({method: 'apprequests', message: 'Invite others to MetaBright'}); 
-            });
-          })
-        #fb-root
         = render "modals/explore"
       - if current_user.guest_user?
         = render "modals/login"
@@ -29,3 +20,13 @@
       = yield
     - if show_footer
       = render "layouts/footer"
+    - if show_nav_bar
+      %script{ src: "http://connect.facebook.net/en_US/all.js" }
+      :javascript
+        $(function(){
+          $(".invite_facebook_friends").click(function(){
+            FB.init({appId  : "#{ENV['FACEBOOK_KEY']}", frictionlessRequests: true});
+            FB.ui({method: 'apprequests', message: 'Invite others to MetaBright'}); 
+          });
+        })
+      #fb-root
