Fixing nil task error on path page.

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -11,10 +11,12 @@
           MetaBright is the place to prove and showcase your skills. Poke around for a bit and try a practice problem.
         - @section ||= @path.next_section
         - @task ||= @section.next_task(nil, true)
-        - @start_countdown = false
-        - @next_text = "Let's Go!"
-        - @next_link = start_section_path(@section.id)
-        = render file: "sections/continue"
+        - if @task
+          - @answers = @task.answers
+          - @start_countdown = false
+          - @next_text = "Let's Go!"
+          - @next_link = start_section_path(@section.id)
+          = render file: "sections/continue"
   
   .top
     = link_to challenge_path(@path.permalink), class: "home" do
