--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -22,8 +22,11 @@
     = link_to challenge_path(@path.permalink), class: "home" do
       = image_tag @path.path_pic, alt: "#{@path.name}"
     - if current_user
-      %a#launch_button.button.button-actionable{ onclick: "$('#launchpad').removeClass('hide').modal({ keyboard: true, backdrop: 'static', show: true });" } 
-        Continue Level #{@enrollment.level} »
+      - if @enrollment.total_points > 0
+        %a#launch_button.button.button-actionable{ onclick: "$('#launchpad').removeClass('hide').modal({ keyboard: true, backdrop: 'static', show: true });" } 
+          Continue Level #{@enrollment.level} »
+      - else
+        = link_to "Start Level 1", continue_path_path(@path), class: "button button-actionable", id: "launch_button"
     %h1= @path.name
     %h2
       - if current_user
