Adding loading spinner for form submittal too.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -85,6 +85,14 @@
           $("#page_loading").hide();
         });
       });
+      
+      $("form").submit(function(){
+        $('#page_loading').fadeIn();
+        $(this).on("ajax:success", function(){
+          $("#page_loading").hide();
+        });
+        return true;
+      });
 
     - if Rails.env == "production"
       :javascript
