--- a/app/views/tasks/_new_task_form.html.haml
+++ b/app/views/tasks/_new_task_form.html.haml
@@ -14,6 +14,13 @@
       %div.answers{ style: "margin-left: 20px;" }
         
         .control-group
+          .control-group
+            %label.control-label Quoted Text (optional)
+            .controls{ style: "margin-top: 6px;" }
+              %a.show_quoted_text{ onclick: "$(this).hide(); $(this).siblings('#task_quoted_text').show();" } Add quoted text
+              = text_area_tag("task[quoted_text]", nil, style: "display: none; height: 150px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;")
+        
+        .control-group
           %label.control-label Answer type
           .controls.image_upload
             = f.select :answer_type, hash_to_array(Task::TYPES), style: "display: inline-block; "
