--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -63,6 +63,17 @@
                 .lo Followers
           .span7{style: "min-height: 65px; vertical-align: top; margin: 8px 0 0 0; width: 600px;"}
             %h1= @user.name
+            - if false
+              <a href=".hover_card" role="button" class="btn" data-toggle="modal">Launch hovercard</a>
+              .hover_card.modal.hide.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", :role => "dialog", :tabindex => "-1"}
+                .header
+                  %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
+                  %img{ src: "http://www.placekitten.com/500/500"}
+                .body
+                  %p One fine body…
+                .footer
+                  %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
+                  %button.btn.btn-primary Save changes
             - if badge = User.reputation_badge(@user.earned_points)
               = image_tag badge[0], class: "rep_badge", title: badge[1], alt: badge[1]
             - unless @user.description.blank?
@@ -229,6 +240,8 @@
               %h4 #{@task_feeds_by_path[enrollment.path_id].posts.size} Tasks Completed
               %div.profilecontent
                 = render "newsfeed/feed", feed: @task_feeds_by_path[enrollment.path_id]
+                
+    
 
 :javascript
   $('.comment').click({ animation: 'slide', hover_x: '400px' });
@@ -271,3 +284,5 @@
     $unfollow_button.addClass("button-info");
     $unfollow_button.text("Following");
   });
+  
+  $('#TestHoverCard').modal(options)
